# fubaco

./: .gitignore  Cargo.toml  LICENSE  README.md  body_canonicalize.pl  list_suspicious_from.tsv  run.sh
src/: main.rs  my_crypto.rs  my_disconnect.rs  my_dkim_verifier.rs  my_dmarc_verifier.rs  my_dns_resolver.rs  my_fqdn.rs  my_fubaco_header.rs  my_logger.rs  my_message_parser.rs  my_plugin_yondakiji.rs  my_plugin_yondatweet.rs  my_pop3_bridge.rs  my_spam_checker.rs  my_spf_verifier.rs  my_str.rs  my_text_line_stream.rs  my_timestamp.rs  pop3_stream.rs  pop3_upstream.rs
