[package]
name = "fubaco"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
encoding_rs = { version = "0.8.34", optional = true }
lazy_static = "1.5.0"
mail-parser = { version = "0.9.3", features = ["full_encoding"] }
native-tls = "0.2.12"
regex = "1.10.5"
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
unicode-jp = "0.4.0"
unicode-normalization = "0.1.23"
