[package]
name = "fubaco"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
encoding_rs = { version = "0.8.34", optional = true }
lazy_static = "1.5.0"
mail-parser = { version = "0.9.3", features = ["full_encoding"] }
native-tls = "0.2.12"
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["http2", "rustls-tls"] }
rsa = "0.9.6"
rustls = { version = "0.23.12", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.7.1"
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
tokio = { version = "1.39.2", features = ["full"] }
unicode-jp = "0.4.0"
unicode-normalization = "0.1.23"
webpki-roots = "0.26.3"
